# programming_challenges

./: 50.py
01_dlmanager/: Entry.cpp  Entry.hpp  Makefile  link.cpp  link.hpp  main  main.cpp  main.h  main.hpp
02/: main.cpp
102_spinning_cube/: CMakeLists.txt  README.md  main.cpp  shader.vs
102_spinning_cube/shader/: shader_test.fgs  shader_test.vts  test.frag  test.vert
102_spinning_cube/src/: loadModel.h  logging.cpp  logging.h  main.cpp  model-impl.cpp  model.cpp  model.h  obj.h  shader.cpp  shader.h  transform.cpp  transform.h
10_todo/: CMakeLists.txt  README.md  a.out  functions.cpp  functions.h  item.cpp  item.h  main.cpp
74_neural_net_basic/: main.cpp
